--- a/Projekte/Berechnen.ipynb
+++ b/Projekte/Berechnen.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "6f418073",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
    "id": "ba5c156a",
    "metadata": {},
    "source": [
-    "# RGB-LED-Streifen\n",
+    "## RGB-LED-Streifen\n",
     "\n",
     "### Technische Merkmale\n",
     "\n",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "5b1dabd2",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "193b7e22",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "b93aa3fa",
    "metadata": {},
    "outputs": [
@@ -316,7 +316,7 @@
        "60.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "9d6f7e5a",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "9c6f4a94",
    "metadata": {},
    "outputs": [
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "425a9723",
    "metadata": {},
    "outputs": [
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "9baf4523",
    "metadata": {},
    "outputs": [
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "cf60bca1",
    "metadata": {},
    "outputs": [
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "c1be373f",
    "metadata": {},
    "outputs": [
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "a503dcc3",
    "metadata": {},
    "outputs": [
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "fac89d22",
    "metadata": {},
    "outputs": [
@@ -1029,6 +1029,126 @@
     "print(f\"Anzahl der Moleküle in 1 mol Wasser: {anzahl_molekuele_pro_mol} Moleküle\")\n",
     "print(f\"Gesamtlichtstärke der Kerzen: {gesamtlichtstaerke_cd} cd\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cff01841",
+   "metadata": {},
+   "source": [
+    "## Was ist ein Joule?\n",
+    "\n",
+    "Ein Joule (Symbol: J) ist die SI-Einheit der Energie, benannt nach dem englischen Physiker James Prescott Joule. Ein Joule ist definiert als die Energiemenge, die benötigt wird, um ein Objekt mit einer Kraft von einem Newton einen Meter weit zu bewegen. Es ist auch die Energiemenge, die verbraucht wird, wenn ein Strom von einem Ampere eine Sekunde lang durch einen Widerstand von einem Ohm fließt. In anderen Worten:\n",
+    "\n",
+    "$1 \\, \\text{J} = 1 \\, \\text{N} \\cdot \\text{m} = 1 \\, \\text{W} \\cdot \\text{s} = 1 \\, \\text{kg} \\cdot \\text{m}^2 \\cdot \\text{s}^{-2}$\n",
+    "\n",
+    "### Kinetische Energie\n",
+    "\n",
+    "Kinetische Energie ist die Energie, die ein Objekt aufgrund seiner Bewegung besitzt. Sie hängt von der Masse des Objekts und seiner Geschwindigkeit ab. Die Formel für die kinetische Energie ($E_k$) eines Objekts lautet:\n",
+    "\n",
+    "$E_k = \\frac{1}{2} m v^2$\n",
+    "\n",
+    "wo:\n",
+    "\n",
+    "- $E_k$ die kinetische Energie in Joule (J) ist,\n",
+    "- $m$ die Masse des Objekts in Kilogramm (kg),\n",
+    "- $v$ die Geschwindigkeit des Objekts in Metern pro Sekunde (m/s)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ae5f752d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kinetische Energie eines 1500 kg schweren Autos bei 50 km/h: 144675.93 Joule (0.14 MJ)\n",
+      "Kinetische Energie eines 1500 kg schweren Autos bei 80 km/h: 370370.37 Joule (0.37 MJ)\n",
+      "Kinetische Energie eines 1500 kg schweren Autos bei 130 km/h: 978009.26 Joule (0.98 MJ)\n",
+      "Kinetische Energie eines 1500 kg schweren Autos bei 200 km/h: 2314814.81 Joule (2.31 MJ)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Kinetische Energie eines Autos berechnen\n",
+    "# Anpassung des Programms zur Ausgabe der kinetischen Energie in sinnvollen Einheitengrößen (Joule und Megajoule)\n",
+    "\n",
+    "# Definition der Umrechnungsfunktion von km/h in m/s\n",
+    "def kmh_to_ms(velocity_kmh):\n",
+    "    return velocity_kmh / 3.6\n",
+    "\n",
+    "# Definition der Funktion zur Berechnung der kinetischen Energie\n",
+    "def calculate_kinetic_energy(mass_kg, velocity_ms):\n",
+    "    return 0.5 * mass_kg * velocity_ms**2\n",
+    "\n",
+    "# Umrechnung der Energie von Joule in Megajoule\n",
+    "def joule_to_megajoule(energie_j):\n",
+    "    return energie_j / 1_000_000\n",
+    "\n",
+    "# Masse des Autos in Kilogramm\n",
+    "mass_kg = 1500  # Beispielhafte Masse eines Autos\n",
+    "\n",
+    "# Verschiedene Geschwindigkeiten in km/h\n",
+    "geschwindigkeiten_kmh = [50, 80, 130, 200]\n",
+    "\n",
+    "# Berechnung und Ausgabe der kinetischen Energie für jede Geschwindigkeit in Joule und Megajoule\n",
+    "for geschwindigkeit in geschwindigkeiten_kmh:\n",
+    "    # Umrechnung der Geschwindigkeit in m/s\n",
+    "    geschwindigkeit_ms = kmh_to_ms(geschwindigkeit)\n",
+    "    # Berechnung der kinetischen Energie\n",
+    "    energie_j = calculate_kinetic_energy(mass_kg, geschwindigkeit_ms)\n",
+    "    energie_mj = joule_to_megajoule(energie_j)\n",
+    "    print(f\"Kinetische Energie eines {mass_kg} kg schweren Autos bei {geschwindigkeit} km/h: {energie_j:.2f} Joule ({energie_mj:.2f} MJ)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5e01b23a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zeit: 1 Sekunde(n), Strecke: 4.91 Meter, Geschwindigkeit: 9.81 m/s, Kinetische Energie: 3849.44 Joule\n",
+      "Zeit: 2 Sekunde(n), Strecke: 19.62 Meter, Geschwindigkeit: 19.62 m/s, Kinetische Energie: 15397.78 Joule\n",
+      "Zeit: 10 Sekunde(n), Strecke: 490.50 Meter, Geschwindigkeit: 98.10 m/s, Kinetische Energie: 384944.40 Joule\n",
+      "Zeit: 20 Sekunde(n), Strecke: 1962.00 Meter, Geschwindigkeit: 196.20 m/s, Kinetische Energie: 1539777.60 Joule\n",
+      "Zeit: 60 Sekunde(n), Strecke: 17658.00 Meter, Geschwindigkeit: 588.60 m/s, Kinetische Energie: 13857998.40 Joule\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Berechne Zunahme von Geschwindigkeit und kinetischer Energie mit der Zeit im freien Fall\n",
+    "# Berechnungen für verschiedene Zeiten: 1s, 2s, 10s, 20s, 60s\n",
+    "zeiten_s = [1, 2, 10, 20, 60]\n",
+    "masse_kg = 80  # Masse in Kilogramm\n",
+    "\n",
+    "# Listen für Ergebnisse\n",
+    "strecken_m = []\n",
+    "geschwindigkeiten_m_s = []\n",
+    "energien_j = []\n",
+    "\n",
+    "for t in zeiten_s:\n",
+    "    # Berechnung der zurückgelegten Strecke\n",
+    "    s = 0.5 * g * t**2\n",
+    "    strecken_m.append(s)\n",
+    "    \n",
+    "    # Berechnung der Geschwindigkeit am Ende der Zeitperiode\n",
+    "    v = g * t\n",
+    "    geschwindigkeiten_m_s.append(v)\n",
+    "    \n",
+    "    # Berechnung der kinetischen Energie am Ende der Zeitperiode\n",
+    "    E_kin = 0.5 * masse_kg * v**2\n",
+    "    energien_j.append(E_kin)\n",
+    "\n",
+    "# Ausgabe der Ergebnisse\n",
+    "for t, s, v, E in zip(zeiten_s, strecken_m, geschwindigkeiten_m_s, energien_j):\n",
+    "    print(f\"Zeit: {t} Sekunde(n), Strecke: {s:.2f} Meter, Geschwindigkeit: {v:.2f} m/s, Kinetische Energie: {E:.2f} Joule\")"
    ]
   }
  ],
