IR-Sensor und Ultraschallsensor einzeln betrachtet

--- a/Notizen/README.tex
+++ b/Notizen/README.tex
@@ -1,4 +1,4 @@
-% ju 17-Feb-24 README.tex
+% ju 18-Feb-24 README.tex
 \documentclass{vorlage-design-main}
 \usepackage[utf8]{inputenc}
 \usepackage{longtable}
@@ -274,6 +274,9 @@ mv *.zip /Users/jan/daten/start/IoT/Mars-Rover/Projekte
 ChatGPT \url{https://chat.openai.com/}
 
 \begin{lstlisting}
+# Informationsfluss
+Visualisiere in einem Flussdiagramm (ASCII)
+
 # Für C- oder C++-Projekte wird oft der JavaDoc-Stil empfohlen
 Erstelle Code mit Doxygen-kompatiblen Kommentaren
 
