--- a/Notizen/Reflexion.tex
+++ b/Notizen/Reflexion.tex
@@ -1,4 +1,4 @@
-% ju 17-Feb-24 Reflexion.tex
+% ju 18-Feb-24 Reflexion.tex
 \documentclass{vorlage-design-main}
 \usepackage[utf8]{inputenc}
 \usepackage{longtable}
@@ -2005,7 +2005,7 @@ Sauerstoff (O). Wasser ist jedoch eine molekulare Verbindung, daher ist
 die korrekte Bezeichnung hier >>molare Masse<<.
 
 \hypertarget{atommasse-der-elemente}{%
-\paragraph{Atommasse der Elemente:}\label{atommasse-der-elemente}}
+\paragraph{Atommasse der Elemente}\label{atommasse-der-elemente}}
 
 \begin{itemize}
 
@@ -2017,7 +2017,7 @@ die korrekte Bezeichnung hier >>molare Masse<<.
 
 \hypertarget{molare-masse-von-wasser-h2o}{%
 \paragraph{Molare Masse von Wasser
-(H2O):}\label{molare-masse-von-wasser-h2o}}
+(H2O)}\label{molare-masse-von-wasser-h2o}}
 
 Die molare Masse von Wasser berechnet sich aus der Summe der molaren
 Massen seiner Atome: 2 Atome Wasserstoff und 1 Atom Sauerstoff.
@@ -2027,7 +2027,7 @@ $\text{Molare Masse H2O} = 2(\text{Atommasse H}) + \text{Atommasse O}$
 $\text{Molare Masse H2O} = 2(1 \, \text{u}) + 16 \, \text{u} = 18 \, \text{u}$
 
 \hypertarget{umrechnung-in-gramm}{%
-\paragraph{Umrechnung in Gramm:}\label{umrechnung-in-gramm}}
+\paragraph{Umrechnung in Gramm}\label{umrechnung-in-gramm}}
 
 Da die molare Masse in Gramm pro Mol (g/mol) angibt, wie viel 1 Mol der
 Substanz wiegt, entspricht die molare Masse von Wasser (18 u) direkt 18
