--- a/Projekte/Berechnen.ipynb
+++ b/Projekte/Berechnen.ipynb
@@ -1150,6 +1150,89 @@
     "for t, s, v, E in zip(zeiten_s, strecken_m, geschwindigkeiten_m_s, energien_j):\n",
     "    print(f\"Zeit: {t} Sekunde(n), Strecke: {s:.2f} Meter, Geschwindigkeit: {v:.2f} m/s, Kinetische Energie: {E:.2f} Joule\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b4b8610",
+   "metadata": {},
+   "source": [
+    "## Ultraschallsensor\n",
+    "\n",
+    "Beim Arbeiten mit dem HC-SR04 Ultraschallsensor und ähnlichen Sensoren ist es üblich, die Zeit in Mikrosekunden (µs) zu messen, da dies die Genauigkeit der Entfernungsmessung erhöht."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "70999547",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([117.6470588235294, 1176.4705882352941, 23529.41176470588],\n",
+       " [0.11764705882352941, 1.1764705882352942, 23.52941176470588],\n",
+       " [0.00011764705882352942, 0.0011764705882352942, 0.023529411764705882],\n",
+       " [8500.0, 849.9999999999999, 42.5])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Berechnung der Dauer des Echos für verschiedene Entfernungen in Mikrosekunden\n",
+    "schallgeschwindigkeit_cm_us = 0.034  # Schallgeschwindigkeit in cm/µs\n",
+    "\n",
+    "# Entfernungen in cm\n",
+    "entfernungen_cm = [2, 20, 400]\n",
+    "\n",
+    "# Berechnung der Dauer für jede Entfernung in Mikrosekunden (µs)\n",
+    "dauer_us = [(entfernung * 2 / schallgeschwindigkeit_cm_us) for entfernung in entfernungen_cm]\n",
+    "\n",
+    "# Umrechnung der Dauer von Mikrosekunden in Millisekunden (ms)\n",
+    "dauer_ms = [dauer / 1000 for dauer in dauer_us]\n",
+    "\n",
+    "# Umrechnung der Dauer von Millisekunden in Sekunden (s)\n",
+    "dauer_s = [dauer / 1000 for dauer in dauer_ms]\n",
+    "\n",
+    "# Um ein besseres Verständnis für die Dauer zu bekommen (Berechnung des reziproken Werts der Dauer in Sekunden)\n",
+    "dauer_v = [1 / dauer if dauer != 0 else 0 for dauer in dauer_s]\n",
+    "\n",
+    "# Ausgabe der Ergebnisse\n",
+    "dauer_us, dauer_ms, dauer_s, dauer_v"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bf3633b",
+   "metadata": {},
+   "source": [
+    "Die berechneten Ergebnisse für die Dauer des Echos bei verschiedenen Entfernungen und deren Umrechnungen sind:\n",
+    "\n",
+    "- **Dauer in Mikrosekunden (µs):**\n",
+    "  - 2 cm Entfernung: 117.65 µs\n",
+    "  - 20 cm Entfernung: 1176.47 µs\n",
+    "  - 400 cm Entfernung: 23529.41 µs\n",
+    "\n",
+    "- **Dauer in Millisekunden (ms):**\n",
+    "  - 2 cm Entfernung: 0.118 ms\n",
+    "  - 20 cm Entfernung: 1.176 ms\n",
+    "  - 400 cm Entfernung: 23.529 ms\n",
+    "\n",
+    "- **Dauer in Sekunden (s):**\n",
+    "  - 2 cm Entfernung: 0.000118 s\n",
+    "  - 20 cm Entfernung: 0.001176 s\n",
+    "  - 400 cm Entfernung: 0.023529 s\n",
+    "\n",
+    "- **Reziproke Werte der Dauer in Sekunden (1/s, für ein besseres Verständnis der Dauer):**\n",
+    "  - Bei einer **Entfernung von 2 cm** könnte der Schall das Hindernis und zurück zum Sensor **8500 Mal pro Sekunde** reisen.\n",
+    "  - Bei einer **Entfernung von 20 cm** könnte dies **850 Mal pro Sekunde** geschehen.\n",
+    "  - Und bei einer **Entfernung von 400 cm (4 Meter)** könnte der Schall diese Strecke **42,5 Mal pro Sekunde** zurücklegen.\n",
+    "\n",
+    "Diese Zahlen veranschaulichen die Häufigkeit, mit der der Schall die angegebene Distanz innerhalb einer Sekunde hin und zurück reisen kann, und bieten eine anschauliche Perspektive auf die Geschwindigkeit der Schallausbreitung in Bezug auf die Entfernungsmessung mit dem HC-SR04 Ultraschallsensor."
+   ]
   }
  ],
  "metadata": {
